--- a/markdeep-slides-print.css
+++ b/markdeep-slides-print.css
@@ -1,1 +1,12 @@
-TODO
+@page {
+    size: 1600px 900px;  /* 16 : 9 aspect ratio */
+}
+
+.slide {
+    border: none !important;
+    page-break-before: always;
+
+    /* fix for margin collapse */
+    /*margin-top: 0.1px;
+    height: calc(var(--slide-height) - 0.1px) !important;*/
+}
