--- a/slides-theme-simple.css
+++ b/slides-theme-simple.css
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i&display=swap');
+/* TODO add iosevka once it's on google fonts */
+
 :root {
     --text-color: black;
     --accent-color: #666;
     --accent-color2: #ddd;
     --link-color: #38c;
-    --text-font: "Helvetica";
+    --text-font: "Source Sans Pro";
     --code-font: "Courier";
 }
 
 * {
     box-sizing: border-box;
+}
+
+body {
+    text-align: left;
 }
 
 h1:before,
