--- a/slides-theme-simple.css
+++ b/slides-theme-simple.css
@@ -153,7 +153,7 @@ kbd {
 
 /* diagrams */
 .md svg.diagram {
-    stroke-width: 0.05rem;
+    /*stroke-width: 0.05rem;*/  /* should be defined in px – diagrams are scaled differently */
 }
 
 
