--- a/slides-theme-simple.css
+++ b/slides-theme-simple.css
@@ -34,23 +34,6 @@ h3:before {
     margin: 0 !important;
 }
 
-/* important widths, margins and paddings */
-.md div.title, h1, h2 {
-    margin: 0;
-    padding: 0;
-}
-h3 {
-    margin: 1rem 0;
-}
-h1, h2 {
-    width: calc(var(--slide-width) + 2 * var(--side-margin));
-    padding-left: var(--side-margin);
-    margin-left: calc(0rem - var(--side-margin));
-}
-p, .md pre.listing, .listing, div.title, ol, ul, .admonition, center, .fancyquote, .bib, table, .center, blockquote {
-    width: 100%;
-}
-
 
 /* basics */
 .md strong,
@@ -73,6 +56,12 @@ kbd {
     box-shadow: 0 0.05em 0.1em rgba(0, 0, 0, .2),
                 0 0.05em 0     rgba(255, 255, 255, .7) inset;
 }
+table {
+    font-size: inherit;
+}
+center {
+    margin: 1rem 0;
+}
 .accent {
     color: var(--accent-color);
 }
@@ -84,7 +73,8 @@ kbd {
     text-align: left;
     text-transform: uppercase;
     font-size: 2.5rem !important;
-    margin-top: calc(var(--slide-height) / 2 - 12rem / 2);
+    margin: calc(var(--slide-height) / 2 - 12rem / 2) 0 0 0;
+    padding: 0;
 }
 .md div.subtitle {
     text-align: left;
@@ -98,6 +88,9 @@ kbd {
 .md h2 {
     text-align: left;
     border: none !important;
+    width: calc(var(--slide-width) + 2 * var(--side-margin));
+    padding-left: var(--side-margin);
+    margin: 0 0 0 calc(0rem - var(--side-margin));
 }
 .md h1 {
     background: var(--accent-color2);
@@ -116,6 +109,7 @@ kbd {
 .md h3 {
     color: inherit;
     font-size: 1rem;
+    margin: 1rem 0;
     padding: 0;
 }
 
@@ -124,6 +118,33 @@ kbd {
 .md hr.ignore {
     border: 0;
     border-bottom: 0.1rem solid var(--accent-color2);
+}
+
+
+/* lists */
+ol {
+    padding-left: 1.3rem;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+ul > li.plus:before {
+    content: "+";
+    padding-right: 0.7em;
+}
+ul > li.minus:before {
+    content: "–";
+    padding-right: 0.7em;
+}
+ul > li.asterisk:before {
+    content: "●";
+    font-size: 0.9em;
+    padding-right: 0.7em;
+}
+ul > li {
+    padding-left: 1.2em;
+    text-indent: -1.2em !important;
 }
 
 
@@ -162,6 +183,22 @@ kbd {
     padding: 0.25rem 0.5rem;
     line-height: 1rem;
     resize: initial;
+}
+.md pre.listing .linenumbers span.line:before {
+    color: var(--accent-color);
+    width: 1rem;
+    margin-left: -0.5rem;
+    margin-right: 1rem;
+    padding: 0;
+}
+
+
+/* captions */
+.md div.imagecaption,
+.md div.tablecaption,
+.md div.listingcaption {
+    margin: 0.5rem 0 0;
+    text-align: center;
 }
 
 
@@ -202,6 +239,13 @@ kbd {
 }
 
 
+/* calendars & schedules */
+.md table.calendar {
+    font-size: 0.6rem;
+    font-family: inherit;
+}
+
+
 /* endnotes and bibliography */
 .md .endnote,
 .md .bib {
@@ -221,4 +265,38 @@ kbd {
     color: var(--link-color);
     font-family: var(--code-font);
     font-weight: initial;
+}
+
+
+/* media */
+
+/* TODO should this go into the reset stylesheet? */
+/* TODO also for native videos, and IMAGES! */
+img {
+    max-width: 100%;
+    max-height: calc(var(--slide-height) - 2rem);
+}
+video {
+    width: 21.33rem;
+}
+iframe[src^="https://www.youtube"],
+iframe[src^="https://player.vimeo"] {
+    width: 21.33rem;
+    height: 12rem;
+}
+/*center img[full],
+center video[full],
+center iframe[full] {
+    margin-top: -1rem;  /* counteract center top margin
+    margin-left: -2rem;  /* counteract side margin
+}
+center img[full] {
+    max-height: var(--slide-height);
+    max-width: var(--slide-width);
+}
+*/
+
+/* TODO move this (and some other stuff) into reset stylesheet? */
+a.target {
+    position: absolute;  /* enable margin collapse: image a paragraph and a headline (both margin: 1rem 0), with the headline's a.target between them. should still work just fine */
 }
